# spotanomaly2

./: .env.dist  .gitignore  .releaserc.json  CHANGELOG.md  README.MD  REUSE.toml  example_live.py  example_pipeline.py  pyproject.toml
.github/workflows/: lint.yml  release.yml
config/: default.yaml
config/channel_models/: panel_1_default.yaml  panel_2_default.yaml
notebooks/: analyze_anomaly_contributions.ipynb  analyze_combined.ipynb  anomaly_scores_with_background.qmd  benchmark_imputation_on_real_data.py  channel_predictions.ipynb  compare_kmeans_scorer_strategies.py  compare_panels_time_shift.ipynb  compare_scorer_fit_scope.ipynb  entsoe_anomaly_detection.qmd  manual_outlier_removal_visualization.qmd  plot_anomaly_scores.ipynb  plot_temperature_comparison.ipynb  predict_known_anomalies.qmd  train_with_channel_configs.py  tune_and_compare_models.ipynb  tune_model.py  visualize_predictions.ipynb  visualize_preprocess.ipynb
spotanomaly2/: __init__.py  __main__.py  main.py
spotanomaly2/application/: __init__.py  config.py  data_manager.py  exogenous_downloader.py  exogenous_joiner.py  pipeline.py  readiness_checker.py
spotanomaly2/dashboard/: __init__.py  live_monitor.py  report_generator.py  report_server.py
spotanomaly2/domain/: __init__.py  anomaly_detector.py  constants.py  data_processor.py  exceptions.py  exogenous_fetcher.py  imputation.py  imputation_methods.py  model_trainer.py  model_tuner.py  primary_fetcher.py  primary_registry.py  processing_steps.py  report_generator.py  spotforecast_adapter.py  weather_fetcher.py
spotanomaly2/domain/exogenous/: __init__.py  base.py  registry.py  residual_multiplier.py  source_a.py  weather.py
spotanomaly2/domain/imputation/: __init__.py  base.py  interpolation.py  neighbors.py  psm.py  registry.py  simple.py  sklearn_based.py  subsequence.py
spotanomaly2/domain/processing/: __init__.py  base.py  data_processor.py  imputation.py  maintenance_removal.py  manual_outlier_removal.py  median_filter.py  resample.py  temperature_aggregation.py  weather_adjustment.py
spotanomaly2/domain/processing_steps/: __init__.py  imputation.py  maintenance_removal.py  manual_outlier_removal.py  median_filter.py  resample.py  temperature_aggregation.py  weather_adjustment.py
spotanomaly2/domain/spotforecast_adapter/: __init__.py  channel_prep.py  estimators.py  factory.py  panel_layout.py  prediction.py  predictor.py  preprocessing.py  trainer.py  tuner.py  tuning_metrics.py
spotanomaly2/examples/: __init__.py  entsoe_fetcher.py
spotanomaly2/infrastructure/: __init__.py  auth.py  logging.py  storage.py
spotanomaly2/research/: __init__.py  _spotoptim_helpers.py  cli.py  gmm_scorer.py  labels.py  metrics.py  per_channel.py  report.py  scorer_runner.py  scorer_tuner.py  synthetic.py
tests/: conftest.py  test_anomaly_detector.py  test_cli_smoke.py  test_config.py  test_dashboard.py  test_data_manager.py  test_data_processor.py  test_entsoe_fetcher.py  test_exogenous_downloader.py  test_exogenous_joiner.py  test_exogenous_source_a.py  test_exogenous_weather.py  test_group_detection.py  test_imports.py  test_imputation.py  test_imputation_methods.py  test_main.py  test_model_tuner.py  test_per_channel_detection.py  test_pipeline.py  test_pipeline_end_to_end.py  test_pipeline_integration.py  test_pipeline_is_ready.py  test_primary_registry.py  test_processing_steps.py  test_research_gmm_scorer.py  test_research_labels.py  test_research_metrics.py  test_research_report.py  test_research_scorer_runner.py  test_research_scorer_tuner.py  test_research_synthetic.py  test_spotforecast_adapter.py  test_storage.py  test_tune_train_roundtrip.py  test_weather_fetcher.py
